src/test/resources/tests/typeError/wrongReturnTypeInFunctionType.qg

init true

run {
    runIt(::pow)
}

input(a,b) true

fun runIt(toRun: fun(number, number) -> number): bool {
    return toRun(1, 2)
}